server-side-ui-starter.workloads.tap/packages/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: server-side-ui-starter-route
  annotations:
   healthcheck.gslb.tanzu.vmware.com/service: server-side-ui-starter
   healthcheck.gslb.tanzu.vmware.com/path: /health
   healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-server-side-ui-starter
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: server-side-ui-starter
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
